syntax = "proto3";

package tari.sha_p2pool.rpc;

import "base_node.proto";

service ShaP2Pool {
  rpc GetNewBlockTemplate(GetNewBlockTemplateRequest) returns(tari.rpc.NewBlockTemplateResponse);
}

message GetNewBlockTemplateRequest {
  bytes wallet_payment_address = 1;
}